# auth-file

./: .authrc  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GNUmakefile  NOTICE  README.md  SECURITY.md  build.rs  deny.toml  setup.profile  tests.mk  tools-versions.txt
.aiassistant/rules/: rust-projects.md
.github/instructions/: general.md  rust.instructions.md
.github/workflows/: ci.yml
ARCHIVE/: README.md
completions/bash/: auth  check-version.py
completions/powershell/: auth.ps1  check-version.py.ps1
completions/zsh/: _auth  _check_version_py
dev-tools/: check-version  check-version.py  make-help.py  randlist  shuffle
docs/: Cargo-lock.md  README.md  ROADMAP.md  auth-burner-password-handling-v0-1-0.md  auth-changed-files-v0-8-8-cache-check-fix.md  auth-file-0.8.9-patch1-notes.md  auth-file-0.8.9-patch2-notes.md  auth-file-0.8.9-patch3-notes.md  auth-file-0.8.9-patch4-notes.md  auth-roadmap-checklist-v0-1-1.md  auth-root-directive-hardening-v0-1-0.md  auth-rust-buildrs-tests-notes-v0-4-0.md  auth-rust-design-v0-1-0.md  auth-rust-update-notes-v0-3-0.md  auth-rust-update-notes-v0-5-0.md  auth-rust-update-notes-v0-6-0.md  auth-rust-update-notes-v0-7-0.md  auth-rust-update-notes-v0-7-1.md  auth-rust-update-notes-v0-8-0.md  auth-rust-update-notes-v0-8-1.md  auth-rust-update-notes-v0-8-10.md  auth-rust-update-notes-v0-8-3.md  auth-rust-update-notes-v0-8-4.md  auth-rust-update-notes-v0-8-5.md  auth-rust-update-notes-v0-8-6-regenerated.md  auth-rust-update-notes-v0-8-6.md  auth-rust-update-notes-v0-8-8.md  auth-rust-update-notes-v0-9-0-effective-config-shadow.md  auth-rust-update-notes-v0-9-0.md  auth-rust-update-notes-v0-9-1.md  auth-rust-update-notes-v0-9-1a.md  auth-rust-update-notes-v0-9-1b.md  auth-rust-update-notes-v0-9-1c.md  auth-rust-update-notes-v0-9-2.md  auth-secret-provider-fix-notes-v0-1-0.md  auth-secret-ref-integration-v0-1-0.md  auth-storage-security-notes-v0-6-0.md  auth-tests-mk-review-v0-1-0.md  auth-tests-standalone-fix-notes-v0-1-0.md  auth-v0-8-10c-config-notes.md  (+8 more)
docs/releases/: auth-v0.9.2-windows-hello-native.md  auth-v0.9.2-windows-hello.md  auth-v0.9.3.md  auth-windows-hello-native-fix-v0-9-2.md
golden/: README.md  help.txt  version.txt
platform/macos/: auth-macos-touchid.swift
sbom/: auth-file.dx.json
scripts/: security-checks.sh
src/: lib.rs  main.rs
tests/: cli.rs
