[package]
name = "auth-file"
version = "0.9.0"
edition = "2021"
authors = ["David Black <dcblack@mac.com>"]
rust-version = "1.95.0"
description = "Command-line file authorization and validation utility with privacy-preserving authorization records"
license = "Apache-2.0"
repository = "https://github.com/YOUR-ORG/auth-file"
homepage = "https://github.com/YOUR-ORG/auth-file"
documentation = "https://docs.rs/auth-file"
readme = "README.md"
keywords = ["auth", "cli", "security", "signature", "validation"]
categories = ["command-line-utilities", "authentication", "cryptography"]
include = ["src/**", "tests/**", "platform/**", "docs/**", "build.rs", "Cargo.toml", "README.md", "LICENSE", "NOTICE", "SECURITY.md", "CONTRIBUTING.md", "CHANGELOG.md", "deny.toml"]

[lib]
name = "authlib"
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
dirs = "6"
keyring = "4"
keyring-core = "1"
rpassword = "7.4"
chacha20poly1305 = "0.10"
argon2 = "0.5"
age = "0.11.3"
shadow-rs = { version = "2", default-features = false }
toml = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Security_Credentials_UI", "Foundation"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.27"

[build-dependencies]
shadow-rs = "2"
